--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
       <ion-input type="password"></ion-input>
     </ion-item>
 
-    <button ion-button block>Entrar</button>
+    <button (click)="login()" ion-button block>Entrar</button>
 
   </form>
 
