--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -71,16 +71,14 @@
     </ion-item>
     <ion-item>
       <ion-label stacked>Estado*</ion-label>
-      <ion-select formControlName="estadoId" (ionChange)="updateCidades()">
-        <ion-option value="1">Minas Gerais</ion-option>
-        <ion-option value="2">São Paulo</ion-option>
+      <ion-select formControlName="estadoId" (ionChange)="updateCidades()"> <!--ionchange, evento para atualizar as cidades-->
+        <ion-option *ngFor="let estado of estados; first as f" [value]="estado.id" [selected]="f">{{estado.nome}}</ion-option><!--first as f, referencia ao primeiro estado que estiver na lista, select força que o primeiro estado seja selecionado na lista-->
       </ion-select>
     </ion-item>
     <ion-item>
       <ion-label stacked>Cidade*</ion-label>
       <ion-select formControlName="cidadeId">
-        <ion-option value="1">Uberlândia</ion-option>
-        <ion-option value="2">Campinas</ion-option>
+        <ion-option *ngFor="let cidade of cidades" [value]="cidade.id">{{cidade.nome}}</ion-option><!--first as f, referencia ao primeiro estado que estiver na lista, select força que o primeiro estado seja selecionado na lista-->
       </ion-select>
     </ion-item>
     <button ion-button block type="submit">Criar conta</button>
