--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -9,7 +9,7 @@
 
 <ion-content padding>
   <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="showDetail()">
+    <button ion-item *ngFor="let item of items" (click)="showDetail(item.id)">
       <ion-thumbnail item-start>
         <img [src]="item.imageUrl || 'assets/imgs/prod.jpg'"> <!--se a imagem existir, ele da preferencia pra ela, se nao mostra a prod-->
       </ion-thumbnail>
