--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -25,4 +25,9 @@
       <p>{{item.preco | currency}}</p> <!--currency formata o numero ao estilo moeda-->
     </button>
   </ion-list>
+
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+
 </ion-content>
