--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -23,8 +23,8 @@
     </ion-item>
     <ion-item>
       <button ion-button block (click)="getCameraPicture()" [disabled]="cameraOn">Camera</button>
-      <button ion-button outline (click)="sendPicture()" *ngIf="picture">Enviar imagem</button>
-      <button ion-button outline (click)="cancel()" *ngIf="picture">Enviar imagem</button>
+      <button *ngIf="picture" ion-button outline block (click)="sendPicture()">Enviar imagem</button>
+      <button *ngIf="picture" ion-button outline block (click)="cancel()">Descartar imagem</button>
     </ion-item>
   </ion-card>  
 
